style(test-data): improve the code style (#80)