@@ -1,44 +1,54 @@
+/*
+ * Copyright 2024 European Union. All rights reserved.
+ * European Union EUPL version 1.1.
+ */
+
 package eu.domibus.connector.testdata;
 
-
-import eu.domibus.connector.domain.transition.*;
+import eu.domibus.connector.domain.transition.DomibusConnectorActionType;
+import eu.domibus.connector.domain.transition.DomibusConnectorConfirmationType;
+import eu.domibus.connector.domain.transition.DomibusConnectorDetachedSignatureMimeType;
+import eu.domibus.connector.domain.transition.DomibusConnectorDetachedSignatureType;
+import eu.domibus.connector.domain.transition.DomibusConnectorMessageAttachmentType;
+import eu.domibus.connector.domain.transition.DomibusConnectorMessageConfirmationType;
+import eu.domibus.connector.domain.transition.DomibusConnectorMessageContentType;
+import eu.domibus.connector.domain.transition.DomibusConnectorMessageDetailsType;
+import eu.domibus.connector.domain.transition.DomibusConnectorMessageDocumentType;
+import eu.domibus.connector.domain.transition.DomibusConnectorMessageType;
+import eu.domibus.connector.domain.transition.DomibusConnectorPartyType;
+import eu.domibus.connector.domain.transition.DomibusConnectorServiceType;
 import eu.domibus.connector.domain.transition.tools.ConversionTools;
-
-import org.apache.cxf.helpers.FileUtils;
-import org.slf4j.LoggerFactory;
-import org.slf4j.Logger;
-import org.springframework.core.io.FileSystemResource;
-import org.springframework.core.io.Resource;
-import org.springframework.util.FileSystemUtils;
-import org.springframework.util.StreamUtils;
-
-import javax.activation.DataHandler;
-import javax.activation.DataSource;
-import javax.xml.transform.*;
-import javax.xml.transform.stream.StreamResult;
-import javax.xml.transform.stream.StreamSource;
-import java.io.*;
-import java.nio.channels.Channels;
-import java.nio.channels.FileChannel;
-import java.nio.channels.FileLock;
-import java.nio.file.*;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Properties;
-import java.util.stream.Collectors;
+import javax.activation.DataHandler;
+import javax.activation.DataSource;
 import javax.annotation.Nullable;
+import javax.xml.transform.Source;
+import javax.xml.transform.stream.StreamSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.core.io.FileSystemResource;
+import org.springframework.core.io.Resource;
+import org.springframework.util.StreamUtils;
 
 /**
- * Load and store a Transition Message to the FileSystem
- * Very Simple - used for testing
- * <p>
- * TODO: refactor this class to reduce file size
+ * Load and store a Transition Message to the FileSystem Very Simple - used for testing.
  */
+@SuppressWarnings("squid:S1135")
 public class LoadStoreTransitionMessage {
-
+    // TODO: refactor this class to reduce file size
     private static final Logger LOGGER = LoggerFactory.getLogger(LoadStoreTransitionMessage.class);
-
     public static final String READ_LOCK_FILE_NAME = "edit.lock";
-
     public static final String MESSAGE_PROPERTIES_PROPERTY_FILE_NAME = "message.properties";
     public static final String SERVICE_NAME_PROP_NAME = "service";
     public static final String SERVICE_TYPE_PROP_NAME = "service.type";
@@ -50,9 +60,12 @@ public class LoadStoreTransitionMessage {
     public static final String MESSAGE_DOCUMENT_FILE_PROP_NAME = "message.content.document.file";
     public static final String MESSAGE_DOCUMENT_NAME_PROP_NAME = "message.content.document.name";
     public static final String MESSAGE_DOCUMENT_HASH_PROP_NAME = "message.content.document.hash";
-    public static final String MESSAGE_DOCUMENT_SIGNATURE_FILE_PROP_NAME = "message.content.document.signature.file";
-    public static final String MESSAGE_DOCUMENT_SIGNATURE_TYPE_PROP_NAME = "message.content.document.signature.type";
-    public static final String MESSAGE_DOCUMENT_SIGNATURE_NAME_PROP_NAME = "message.content.document.signature.name";
+    public static final String MESSAGE_DOCUMENT_SIGNATURE_FILE_PROP_NAME =
+        "message.content.document.signature.file";
+    public static final String MESSAGE_DOCUMENT_SIGNATURE_TYPE_PROP_NAME =
+        "message.content.document.signature.type";
+    public static final String MESSAGE_DOCUMENT_SIGNATURE_NAME_PROP_NAME =
+        "message.content.document.signature.name";
     public static final String FROM_PARTY_ID_PROP_NAME = "from.party.id";
     public static final String FROM_PARTY_ID_TYPE_PROP_NAME = "from.party.id.type";
     public static final String FROM_PARTY_ROLE_PROP_NAME = "from.party.role";
@@ -64,91 +77,135 @@ public class LoadStoreTransitionMessage {
     public static final String FINAL_RECIPIENT_PROP_NAME = "message.final-recipient";
     public static final String ORIGINAL_SENDER_NAME_PROP_NAME = "message.original-sender";
     public static final String REF_TO_MESSAGE_ID_PROP_NAME = "message.ref-to-msg.id";
-
-    public static String MESSAGE_CONFIRMATIONS_PREFIX = "message.confirmation";
-    public static String MESSAGE_ATTACHMENT_PREFIX = "message.attachment";
-
+    public static final String MESSAGE_CONFIRMATIONS_PREFIX = "message.confirmation";
+    public static final String MESSAGE_ATTACHMENT_PREFIX = "message.attachment";
     private Path basicFolder;
-
     private Properties messageProperties;
 
+    /**
+     * Loads a DomibusConnectorMessageType object from a given Resource.
+     *
+     * @param resource The Resource from which to load the DomibusConnectorMessageType object.
+     * @return The loaded DomibusConnectorMessageType object.
+     * @throws RuntimeException if an error occurs while loading the message.
+     */
     public static DomibusConnectorMessageType loadMessageFrom(Resource resource) {
         LOGGER.info("Load message from path [{}]", resource);
         try {
-            Path path = Paths.get(resource.getURI());
-            LoadStoreTransitionMessage load = new LoadStoreTransitionMessage(path);
+            var path = Paths.get(resource.getURI());
+            var load = new LoadStoreTransitionMessage(path);
             return load.loadMessage();
         } catch (IOException ioe) {
             throw new RuntimeException(ioe);
         }
     }
 
+    /**
+     * Loads a DomibusConnectorMessageType object from the specified path.
+     *
+     * @param path The path from which to load the DomibusConnectorMessageType object.
+     * @return The loaded DomibusConnectorMessageType object.
+     * @throws RuntimeException if an error occurs while loading the message.
+     */
     public static DomibusConnectorMessageType loadMessageFrom(Path path) {
         LOGGER.info("Load message from path [{}]", path);
         try {
-            LoadStoreTransitionMessage load = new LoadStoreTransitionMessage(path);
+            var load = new LoadStoreTransitionMessage(path);
             return load.loadMessage();
         } catch (IOException ioe) {
             throw new RuntimeException(ioe);
         }
     }
 
-
-    public static void storeMessageTo(Path path, DomibusConnectorMessageType message, boolean overwrite) {
+    /**
+     * Stores a DomibusConnectorMessageType object to the specified path.
+     *
+     * @param path      The path to which the DomibusConnectorMessageType object will be stored.
+     * @param message   The DomibusConnectorMessageType object to be stored.
+     * @param overwrite If set to true, the existing file will be overwritten. If set to false and a
+     *                  file already exists at the specified path, an exception will be thrown.
+     * @throws RuntimeException if an error occurs while storing the message.
+     */
+    public static void storeMessageTo(
+        Path path, DomibusConnectorMessageType message, boolean overwrite) {
         LOGGER.debug("storeMessageTo [{}]", path);
         try {
-            LoadStoreTransitionMessage store = new LoadStoreTransitionMessage(path);
+            var store = new LoadStoreTransitionMessage(path);
             store.storeMessageTo(message, overwrite);
         } catch (IOException ioe) {
             throw new RuntimeException(ioe);
         }
     }
 
-    public static void storeMessageTo(Resource resourcePath, DomibusConnectorMessageType message, boolean overwrite) {
+    /**
+     * Stores a DomibusConnectorMessageType object to the specified path.
+     *
+     * @param resourcePath The path to which the DomibusConnectorMessageType object will be stored.
+     * @param message      The DomibusConnectorMessageType object to be stored.
+     * @param overwrite    If set to true, the existing file will be overwritten. If set to false
+     *                     and a file already exists at the specified path, an exception will be
+     *                     thrown.
+     * @throws RuntimeException if an error occurs while storing the message.
+     */
+    public static void storeMessageTo(
+        Resource resourcePath, DomibusConnectorMessageType message, boolean overwrite) {
         LOGGER.debug("storeMessageTo [{}]", resourcePath);
         try {
-            Path nioPath = Paths.get(resourcePath.getURI());
-            LoadStoreTransitionMessage store = new LoadStoreTransitionMessage(nioPath);
+            var nioPath = Paths.get(resourcePath.getURI());
+            var store = new LoadStoreTransitionMessage(nioPath);
             store.storeMessageTo(message, overwrite);
         } catch (IOException ioe) {
             throw new RuntimeException(ioe);
         }
     }
 
-    //TODO: java locking
-    private void storeMessageTo(DomibusConnectorMessageType message, boolean overwrite) throws IOException {
+    /**
+     * Stores a DomibusConnectorMessageType object to the appropriate location on disk.
+     *
+     * @param message   The DomibusConnectorMessageType object to be stored.
+     * @param overwrite If set to true, the existing file will be overwritten. If set to false and a
+     *                  file already exists, an exception will be thrown.
+     * @throws IOException if an error occurs while storing the message.
+     */
+    // TODO: java locking
+    private void storeMessageTo(DomibusConnectorMessageType message, boolean overwrite)
+        throws IOException {
         LOGGER.debug("storeMessage to [{}] with overwrite [{}]", basicFolder, overwrite);
 
         if (Files.exists(basicFolder) && !overwrite) {
-            throw new RuntimeException(String.format("Overwrite is false, cannot overwrite message in folder %s", basicFolder));
+            throw new RuntimeException(
+                String.format(
+                    "Overwrite is false, cannot overwrite message in folder %s",
+                    basicFolder
+                ));
         }
 
         if (!Files.exists(basicFolder)) {
             Files.createDirectory(basicFolder);
         }
 
-
         Path propertiesResource = basicFolder.resolve(MESSAGE_PROPERTIES_PROPERTY_FILE_NAME);
-        File f = propertiesResource.toFile();
+        var messagePropertiesFile = propertiesResource.toFile();
 
         storeMessageContent(message.getMessageContent());
-
         storeMessageConfirmations(message.getMessageConfirmations());
-
         storeMessageAttachments(message.getMessageAttachments());
-
         storeMessageDetails(message.getMessageDetails());
 
-        try (FileOutputStream fout = new FileOutputStream(f)) {
-            LOGGER.debug("writing properties file [{}]", f);
-            messageProperties.store(fout, "");
+        try (var fileOutputStream = new FileOutputStream(messagePropertiesFile)) {
+            LOGGER.debug("writing properties file [{}]", messagePropertiesFile);
+            messageProperties.store(fileOutputStream, "");
         } catch (IOException ioe) {
-
+            // TODO see why this is empty
         }
-
-
     }
 
+    /**
+     * Stores the details of a DomibusConnectorMessage in the system.
+     *
+     * @param messageDetails The DomibusConnectorMessageDetailsType object containing the message
+     *                       details.
+     */
     private void storeMessageDetails(DomibusConnectorMessageDetailsType messageDetails) {
         putIfNotNull(NATIONAL_ID_PROP_NAME, messageDetails.getBackendMessageId());
         putIfNotNull(EBMS_ID_PROP_NAME, messageDetails.getEbmsMessageId());
@@ -164,7 +221,8 @@ public class LoadStoreTransitionMessage {
         if (messageDetails.getFromParty() != null) {
             putIfNotNull(FROM_PARTY_ID_PROP_NAME, messageDetails.getFromParty().getPartyId());
             putIfNotNull(FROM_PARTY_ROLE_PROP_NAME, messageDetails.getFromParty().getRole());
-            putIfNotNull(FROM_PARTY_ID_TYPE_PROP_NAME, messageDetails.getFromParty().getPartyIdType());
+            putIfNotNull(
+                FROM_PARTY_ID_TYPE_PROP_NAME, messageDetails.getFromParty().getPartyIdType());
         }
         if (messageDetails.getToParty() != null) {
             putIfNotNull(TO_PARTY_ID_PROP_NAME, messageDetails.getToParty().getPartyId());
@@ -175,9 +233,15 @@ public class LoadStoreTransitionMessage {
         if (messageDetails.getAction() != null) {
             putIfNotNull(ACTION_PROP_NAME, messageDetails.getAction().getAction());
         }
-
     }
 
+    /**
+     * Puts the specified value into the message properties map with the specified key, if the value
+     * is not null.
+     *
+     * @param key   the key with which the specified value is to be associated
+     * @param value the value to be put into the message properties map
+     */
     private void putIfNotNull(String key, Object value) {
         if (value != null) {
             messageProperties.put(key, value);
@@ -186,12 +250,16 @@ public class LoadStoreTransitionMessage {
         }
     }
 
-    private void storeMessageAttachments(List<DomibusConnectorMessageAttachmentType> messageAttachments) {
-        for (int i = 0; i < messageAttachments.size(); i++) {
-//            try {
+    private void storeMessageAttachments(
+        List<DomibusConnectorMessageAttachmentType> messageAttachments) {
+        for (var i = 0; i < messageAttachments.size(); i++) {
             DomibusConnectorMessageAttachmentType a = messageAttachments.get(i);
 
-            String attachmentPropertyFile = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX, i, "file");
+            var attachmentPropertyFile = String.format(
+                "%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX,
+                i,
+                "file"
+            );
 
             String fileName = a.getName();
             if (fileName == null) {
@@ -201,123 +269,151 @@ public class LoadStoreTransitionMessage {
             writeBigDataReferenceToResource(attachmentOutputResource, a.getAttachment());
             messageProperties.put(attachmentPropertyFile, fileName);
 
-            String attachmentPropertyName = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX, i, "identifier");
+            var attachmentPropertyName = String.format(
+                "%s.%s.%s",
+                LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX,
+                i,
+                "identifier"
+            );
             messageProperties.put(attachmentPropertyName, a.getIdentifier());
-//            } catch (IOException ioe) {
-//                throw new RuntimeException(ioe);
-//            }
         }
     }
 
-    private void storeMessageConfirmations(List<DomibusConnectorMessageConfirmationType> messageConfirmations) {
-        for (int i = 0; i < messageConfirmations.size(); i++) {
+    private void storeMessageConfirmations(
+        List<DomibusConnectorMessageConfirmationType> messageConfirmations) {
+        for (var i = 0; i < messageConfirmations.size(); i++) {
             try {
-                DomibusConnectorMessageConfirmationType confirmation = messageConfirmations.get(i);
+                var confirmation = messageConfirmations.get(i);
+                var evidenceFilePropertyName = String.format(
+                    "%s.%s.%s",
+                    LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX,
+                    i,
+                    "file"
+                );
+                var evidenceTypePropertyName = String.format(
+                    "%s.%s.%s",
+                    LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX,
+                    i,
+                    "type"
+                );
 
-                String evidenceFilePropertyName = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX, i, "file");
-                String evidenceTypePropertyName = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX, i, "type");
+                messageProperties.put(
+                    evidenceTypePropertyName, confirmation.getConfirmationType().name()
+                );
 
-                messageProperties.put(evidenceTypePropertyName, confirmation.getConfirmationType().name());
-
-                String fileName = confirmation.getConfirmationType().name() + ".xml";
-                messageProperties.put(evidenceFilePropertyName, confirmation.getConfirmationType().name() + ".xml");
+                var fileName = confirmation.getConfirmationType().name() + ".xml";
+                messageProperties.put(
+                    evidenceFilePropertyName, confirmation.getConfirmationType().name() + ".xml"
+                );
 
                 Path r = basicFolder.resolve(fileName);
                 writeXmlSourceToResource(r, confirmation.getConfirmation());
-
             } catch (IOException ioe) {
                 throw new RuntimeException(ioe);
             }
         }
     }
 
-    private void storeMessageContent(DomibusConnectorMessageContentType content) throws IOException {
+    private void storeMessageContent(DomibusConnectorMessageContentType content)
+        throws IOException {
         if (content == null) {
             return;
         }
-        Source xmlContent = content.getXmlContent();
-        Path r = basicFolder.resolve(DEFAULT_CONTENT_XML_FILE_NAME);
-        messageProperties.put(LoadStoreTransitionMessage.MESSAGE_CONTENT_XML_PROP_NAME, LoadStoreTransitionMessage.DEFAULT_CONTENT_XML_FILE_NAME);
+        var xmlContent = content.getXmlContent();
+        var defaultCOntentPath = basicFolder.resolve(DEFAULT_CONTENT_XML_FILE_NAME);
+        messageProperties.put(
+            LoadStoreTransitionMessage.MESSAGE_CONTENT_XML_PROP_NAME,
+            LoadStoreTransitionMessage.DEFAULT_CONTENT_XML_FILE_NAME
+        );
 
-        writeXmlSourceToResource(r, xmlContent);
+        writeXmlSourceToResource(defaultCOntentPath, xmlContent);
 
-        //store message document
-        DomibusConnectorMessageDocumentType messageDocument = content.getDocument();
+        // store message document
+        var messageDocument = content.getDocument();
         if (messageDocument != null) {
             messageDocument.getDocument();
-            String fileName = messageDocument.getDocumentName() == null ? "document.pdf" : messageDocument.getDocumentName();
-            Path d = basicFolder.resolve(fileName);
-            writeBigDataReferenceToResource(d, messageDocument.getDocument());
+            var fileName = messageDocument.getDocumentName() == null
+                ? "document.pdf"
+                : messageDocument.getDocumentName();
+            var messageDocumentPath = basicFolder.resolve(fileName);
+            writeBigDataReferenceToResource(messageDocumentPath, messageDocument.getDocument());
 
-            messageProperties.put(LoadStoreTransitionMessage.MESSAGE_DOCUMENT_FILE_PROP_NAME, fileName);
+            messageProperties.put(
+                LoadStoreTransitionMessage.MESSAGE_DOCUMENT_FILE_PROP_NAME, fileName
+            );
 
             if (messageDocument.getDocumentName() != null) {
-                messageProperties.put(LoadStoreTransitionMessage.MESSAGE_DOCUMENT_NAME_PROP_NAME, messageDocument.getDocumentName());
+                messageProperties.put(
+                    LoadStoreTransitionMessage.MESSAGE_DOCUMENT_NAME_PROP_NAME,
+                    messageDocument.getDocumentName()
+                );
             }
 
-            DomibusConnectorDetachedSignatureType detachedSignature = messageDocument.getDetachedSignature();
+            var detachedSignature = messageDocument.getDetachedSignature();
             if (detachedSignature != null) {
-                byte[] detachedSignatureBytes = detachedSignature.getDetachedSignature();
-                DomibusConnectorDetachedSignatureMimeType detachedSignatureMimeType = detachedSignature.getMimeType();
-                String detachedSignatureName = detachedSignature.getDetachedSignatureName() == null ? "detachedSignature" : detachedSignature.getDetachedSignatureName();
+                var detachedSignatureBytes = detachedSignature.getDetachedSignature();
+                var detachedSignatureMimeType = detachedSignature.getMimeType();
+                var detachedSignatureName = detachedSignature.getDetachedSignatureName() == null
+                    ? "detachedSignature"
+                    : detachedSignature.getDetachedSignatureName();
 
-                String appendix = detachedSignatureMimeType.name().toLowerCase();
-                String detachedResourceFilename = detachedSignatureName + "." + appendix;
-                Path res = basicFolder.resolve(detachedResourceFilename);
+                var appendix = detachedSignatureMimeType.name().toLowerCase();
+                var detachedResourceFilename = detachedSignatureName + "." + appendix;
+                var res = basicFolder.resolve(detachedResourceFilename);
 
                 writeByteArrayToFile(res, detachedSignatureBytes);
 
-                messageProperties.put(LoadStoreTransitionMessage.MESSAGE_DOCUMENT_SIGNATURE_FILE_PROP_NAME, detachedResourceFilename);
-                messageProperties.put(LoadStoreTransitionMessage.MESSAGE_DOCUMENT_SIGNATURE_TYPE_PROP_NAME, detachedSignatureMimeType.value());
+                messageProperties.put(
+                    LoadStoreTransitionMessage.MESSAGE_DOCUMENT_SIGNATURE_FILE_PROP_NAME,
+                    detachedResourceFilename
+                );
+                messageProperties.put(
+                    LoadStoreTransitionMessage.MESSAGE_DOCUMENT_SIGNATURE_TYPE_PROP_NAME,
+                    detachedSignatureMimeType.value()
+                );
                 if (detachedSignatureName != null) {
-                    messageProperties.put(LoadStoreTransitionMessage.MESSAGE_DOCUMENT_SIGNATURE_NAME_PROP_NAME, detachedSignatureName);
+                    messageProperties.put(
+                        LoadStoreTransitionMessage.MESSAGE_DOCUMENT_SIGNATURE_NAME_PROP_NAME,
+                        detachedSignatureName
+                    );
                 }
             }
         }
     }
 
     private void writeByteArrayToFile(Path res, byte[] bytes) {
-        try (FileOutputStream fout = new FileOutputStream(res.toFile())) {
-            StreamUtils.copy(bytes, fout);
-        } catch (FileNotFoundException e) {
-            throw new RuntimeException(e);
+        try (var fileOutputStream = new FileOutputStream(res.toFile())) {
+            StreamUtils.copy(bytes, fileOutputStream);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
     private void writeBigDataReferenceToResource(Path d, DataHandler document) {
-        try (FileOutputStream fout = new FileOutputStream(d.toFile())) {
-            StreamUtils.copy(document.getInputStream(), fout);
-        } catch (FileNotFoundException e) {
-            throw new RuntimeException(e);
+        try (var fileOutputStream = new FileOutputStream(d.toFile())) {
+            StreamUtils.copy(document.getInputStream(), fileOutputStream);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
     private void writeXmlSourceToResource(Path r, Source xmlContent) throws IOException {
-//        File f = r.getFile();
-    	FileOutputStream out = new FileOutputStream(r.toFile());
-        out.write(ConversionTools.convertXMLSourceToByteArray(xmlContent));
-    	out.flush();
-    	out.close();
-//        try (FileOutputStream fout = new FileOutputStream(r.toFile())) {
-//            Transformer transformer = TransformerFactory.newInstance().newTransformer();
-//            transformer.setOutputProperty("{http://xml.apache.org/xslt}indent-amount", "2");
-//            transformer.setOutputProperty(OutputKeys.INDENT, "yes");
-//            StreamResult xmlOutput = new StreamResult(new OutputStreamWriter(fout));
-//            transformer.transform(xmlContent, xmlOutput);
-//        } catch (TransformerConfigurationException e) {
-//            LOGGER.error("Exception occured", e);
-//            throw new RuntimeException(e);
-//        } catch (TransformerException e) {
-//            throw new RuntimeException(e);
-//        }
-    }
-
-
-    private LoadStoreTransitionMessage() {
+        var fileOutputStream = new FileOutputStream(r.toFile());
+        fileOutputStream.write(ConversionTools.convertXMLSourceToByteArray(xmlContent));
+        fileOutputStream.flush();
+        fileOutputStream.close();
+        // try (FileOutputStream fout = new FileOutputStream(r.toFile())) {
+        //     Transformer transformer = TransformerFactory.newInstance().newTransformer();
+        //     transformer.setOutputProperty("{http://xml.apache.org/xslt}indent-amount", "2");
+        //     transformer.setOutputProperty(OutputKeys.INDENT, "yes");
+        //     StreamResult xmlOutput = new StreamResult(new OutputStreamWriter(fout));
+        //     transformer.transform(xmlContent, xmlOutput);
+        // } catch (TransformerConfigurationException e) {
+        //     LOGGER.error("Exception occured", e);
+        //     throw new RuntimeException(e);
+        // } catch (TransformerException e) {
+        //     throw new RuntimeException(e);
+        // }
     }
 
     private LoadStoreTransitionMessage(Path basicFolder) {
@@ -325,12 +421,11 @@ public class LoadStoreTransitionMessage {
         this.basicFolder = basicFolder;
     }
 
-
-    //TODO: java locking
+    // TODO: java locking
     private DomibusConnectorMessageType loadMessage() throws IOException {
-        DomibusConnectorMessageType message = new DomibusConnectorMessageType();
+        var message = new DomibusConnectorMessageType();
 
-        Path propertiesPath = basicFolder.resolve(MESSAGE_PROPERTIES_PROPERTY_FILE_NAME);
+        var propertiesPath = basicFolder.resolve(MESSAGE_PROPERTIES_PROPERTY_FILE_NAME);
         if (!Files.exists(propertiesPath)) {
             throw new IOException("properties " + propertiesPath + " does not exist!");
         }
@@ -339,37 +434,44 @@ public class LoadStoreTransitionMessage {
 
         message.setMessageDetails(loadMessageDetails());
 
-        Resource contentResource = createRelativeResource(messageProperties.getProperty(MESSAGE_CONTENT_XML_PROP_NAME));
+        var contentResource = createRelativeResource(
+            messageProperties.getProperty(MESSAGE_CONTENT_XML_PROP_NAME)
+        );
         if (contentResource != null && contentResource.exists()) {
-            DomibusConnectorMessageContentType content = new DomibusConnectorMessageContentType();
+            var content = new DomibusConnectorMessageContentType();
             content.setXmlContent(loadResourceAsSource(contentResource));
 
             message.setMessageContent(content);
-            //load document
-            String docFileName = messageProperties.getProperty(MESSAGE_DOCUMENT_FILE_PROP_NAME);
+            // load document
+            var docFileName = messageProperties.getProperty(MESSAGE_DOCUMENT_FILE_PROP_NAME);
             if (docFileName != null) {
-                DomibusConnectorMessageDocumentType messageDoc = new DomibusConnectorMessageDocumentType();
+                var messageDoc = new DomibusConnectorMessageDocumentType();
                 Path r = basicFolder.resolve(docFileName);
 
-                messageDoc.setDocument(loadResourceAsDataHandler(new FileSystemResource(r.toFile())));
-                String docName = messageProperties.getProperty(MESSAGE_DOCUMENT_NAME_PROP_NAME);
+                messageDoc.setDocument(
+                    loadResourceAsDataHandler(new FileSystemResource(r.toFile()))
+                );
+                var docName = messageProperties.getProperty(MESSAGE_DOCUMENT_NAME_PROP_NAME);
                 messageDoc.setDocumentName(docName);
 
-                //TODO: load signature
-                String signatureFileName = messageProperties.getProperty(MESSAGE_DOCUMENT_SIGNATURE_FILE_PROP_NAME);
+                // TODO: load signature
+                var signatureFileName =
+                    messageProperties.getProperty(MESSAGE_DOCUMENT_SIGNATURE_FILE_PROP_NAME);
                 if (signatureFileName != null) {
-                    DomibusConnectorDetachedSignatureType detachedSignature = new DomibusConnectorDetachedSignatureType();
+                    var detachedSignature = new DomibusConnectorDetachedSignatureType();
 
+                    var mimeTypeString = messageProperties.getProperty(
+                        MESSAGE_DOCUMENT_SIGNATURE_TYPE_PROP_NAME
+                    );
+                    var detachedSignatureMimeType =
+                        DomibusConnectorDetachedSignatureMimeType.fromValue(mimeTypeString);
 
-                    String mimeTypeString = messageProperties.getProperty(MESSAGE_DOCUMENT_SIGNATURE_TYPE_PROP_NAME);
-                    DomibusConnectorDetachedSignatureMimeType detachedSignatureMimeType =
-                            DomibusConnectorDetachedSignatureMimeType.fromValue(mimeTypeString);
-
-
-//                    DetachedSignatureMimeType mimeType = DetachedSignatureMimeType.valueOf(messageProperties.getProperty("MESSAGE_DOCUMENT_SIGNATURE_TYPE_PROP_NAME"));
-                    String name = messageProperties.getProperty(MESSAGE_DOCUMENT_SIGNATURE_NAME_PROP_NAME);
-                    Path fResource = basicFolder.resolve(signatureFileName);
-                    byte[] signatureBytes = loadResourceAsByteArray(new FileSystemResource(fResource.toFile()));
+                    String name =
+                        messageProperties.getProperty(MESSAGE_DOCUMENT_SIGNATURE_NAME_PROP_NAME);
+                    var signatureFilePath = basicFolder.resolve(signatureFileName);
+                    var signatureBytes = loadResourceAsByteArray(
+                        new FileSystemResource(signatureFilePath.toFile())
+                    );
 
                     detachedSignature.setDetachedSignature(signatureBytes);
                     detachedSignature.setDetachedSignatureName(name);
@@ -379,52 +481,58 @@ public class LoadStoreTransitionMessage {
                 }
 
                 content.setDocument(messageDoc);
-
             }
-
         }
 
-
-        //load attachments
+        // load attachments
         message.getMessageAttachments().addAll(loadMessageAttachments());
 
-        //load confirmations
+        // load confirmations
         message.getMessageConfirmations().addAll(loadMessageConfirmations());
-
 
         return message;
     }
 
     private List<? extends DomibusConnectorMessageConfirmationType> loadMessageConfirmations() {
-        return messageProperties.stringPropertyNames()
-                .stream()
-                .sorted()
-                .filter((k) -> k.startsWith(LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX))
-                .map((k) -> k.split("\\.")[2])
-                .distinct()
-                .map((k) -> {
+        return messageProperties
+            .stringPropertyNames()
+            .stream()
+            .sorted()
+            .filter(k -> k.startsWith(LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX))
+            .map(k -> k.split("\\.")[2])
+            .distinct()
+            .map(k -> {
+                var evidenceFilePropertyName = String.format(
+                    "%s.%s.%s",
+                    LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX,
+                    k, "file"
+                );
+                var evidenceTypePropertyName = String.format(
+                    "%s.%s.%s",
+                    LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX,
+                    k, "type"
+                );
 
+                var resEvidenceFile = createRelativeResource(
+                    messageProperties.getProperty(evidenceFilePropertyName));
 
-                    String evidenceFilePropertyName = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX, k, "file");
-                    String evidenceTypePropertyName = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_CONFIRMATIONS_PREFIX, k, "type");
+                // TODO: determine evidence type!
+                //  DomibusConnectorMessageC domibusConnectorEvidenceType =
+                //  DomibusConnectorEvidenceType.valueOf(messageProperties
+                //  .getProperty(evidenceTypePropertyName));
+                var domibusConnectorConfirmationType = DomibusConnectorConfirmationType.fromValue(
+                    messageProperties.getProperty(evidenceTypePropertyName)
+                );
 
-                    Resource resEvidenceFile = createRelativeResource(messageProperties.getProperty(evidenceFilePropertyName));
+                var confirmation = new DomibusConnectorMessageConfirmationType();
+                confirmation.setConfirmation(loadResourceAsSource(resEvidenceFile));
+                confirmation.setConfirmationType(domibusConnectorConfirmationType);
+                // confirmation.setEvidenceType(domibusConnectorEvidenceType);
+                // confirmation.setConfirmationType(DomibusConnectorConfirmationType.valueOf());
 
-                    //TODO: determine evidence type!
-                    //DomibusConnectorMessageC domibusConnectorEvidenceType = DomibusConnectorEvidenceType.valueOf(messageProperties.getProperty(evidenceTypePropertyName));
-
-                    DomibusConnectorConfirmationType domibusConnectorConfirmationType = DomibusConnectorConfirmationType.fromValue(messageProperties.getProperty(evidenceTypePropertyName));
-
-                    DomibusConnectorMessageConfirmationType confirmation = new DomibusConnectorMessageConfirmationType();
-                    confirmation.setConfirmation(loadResourceAsSource(resEvidenceFile));
-                    confirmation.setConfirmationType(domibusConnectorConfirmationType);
-                    //confirmation.setEvidenceType(domibusConnectorEvidenceType);
-                    //confirmation.setConfirmationType(DomibusConnectorConfirmationType.valueOf());
-
-                    return confirmation;
-
-                })
-                .collect(Collectors.toList());
+                return confirmation;
+            })
+            .toList();
     }
 
     private Source loadResourceAsSource(Resource resEvidenceFile) {
@@ -436,36 +544,42 @@ public class LoadStoreTransitionMessage {
     }
 
     private List<DomibusConnectorMessageAttachmentType> loadMessageAttachments() {
-
-
-        return messageProperties.stringPropertyNames()
-                .stream()
-                .sorted()
-                .filter((k) -> k.startsWith(LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX))
-                .map((k) -> k.split("\\.")[2])
-                .distinct()
-                .map((k) -> {
-//                    try {
-                    DomibusConnectorMessageAttachmentType attachment = new DomibusConnectorMessageAttachmentType();
-                    String filePropertyName = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX, k, "file");
-                    String identifierPropertyName = String.format("%s.%s.%s", LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX, k, "identifier");
-                    Path res = basicFolder.resolve(messageProperties.getProperty(filePropertyName));
-                    attachment.setAttachment(loadResourceAsDataHandler(new FileSystemResource(res.toFile())));
-                    attachment.setIdentifier(messageProperties.getProperty(identifierPropertyName));
-                    return attachment;
-
-//                    } catch (IOException ioe) {
-//                        throw new RuntimeException(ioe);
-//                    }
-                })
-                .collect(Collectors.toList());
-
+        return messageProperties
+            .stringPropertyNames()
+            .stream()
+            .sorted()
+            .filter(k -> k.startsWith(
+                LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX))
+            .map(k -> k.split("\\.")[2])
+            .distinct()
+            .map(k -> {
+                var attachment = new DomibusConnectorMessageAttachmentType();
+                var filePropertyName = String.format(
+                    "%s.%s.%s",
+                    LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX,
+                    k,
+                    "file"
+                );
+                var identifierPropertyName = String.format(
+                    "%s.%s.%s",
+                    LoadStoreTransitionMessage.MESSAGE_ATTACHMENT_PREFIX,
+                    k,
+                    "identifier"
+                );
+                Path res = basicFolder.resolve(
+                    messageProperties.getProperty(filePropertyName));
+                attachment.setAttachment(loadResourceAsDataHandler(
+                    new FileSystemResource(res.toFile())));
+                attachment.setIdentifier(
+                    messageProperties.getProperty(identifierPropertyName));
+                return attachment;
+            })
+            .toList();
     }
 
     private DataHandler loadResourceAsDataHandler(Resource res) {
         try {
-            DataHandler dh = new DataHandler(new InputStreamDataSource(res.getInputStream()));
-            return dh;
+            return new DataHandler(new InputStreamDataSource(res.getInputStream()));
         } catch (IOException ioe) {
             throw new RuntimeException(ioe);
         }
@@ -482,36 +596,33 @@ public class LoadStoreTransitionMessage {
 
     private byte[] loadResourceAsByteArray(Resource res) {
         try {
-            InputStream inputStream = res.getInputStream();
+            var inputStream = res.getInputStream();
             return StreamUtils.copyToByteArray(inputStream);
         } catch (IOException ioe) {
             throw new RuntimeException(ioe);
         }
     }
 
-
-
-
     private DomibusConnectorMessageDetailsType loadMessageDetails() {
-        DomibusConnectorMessageDetailsType messageDetails = new DomibusConnectorMessageDetailsType();
+        var messageDetails = new DomibusConnectorMessageDetailsType();
 
-        DomibusConnectorActionType domibusConnectorActionType = new DomibusConnectorActionType();
+        var domibusConnectorActionType = new DomibusConnectorActionType();
         domibusConnectorActionType.setAction(messageProperties.getProperty(ACTION_PROP_NAME));
         messageDetails.setAction(domibusConnectorActionType);
 
-        DomibusConnectorPartyType fromParty = new DomibusConnectorPartyType();
+        var fromParty = new DomibusConnectorPartyType();
         fromParty.setPartyId(messageProperties.getProperty(FROM_PARTY_ID_PROP_NAME));
         fromParty.setPartyIdType(messageProperties.getProperty(FROM_PARTY_ID_TYPE_PROP_NAME));
         fromParty.setRole(messageProperties.getProperty(FROM_PARTY_ROLE_PROP_NAME));
         messageDetails.setFromParty(fromParty);
 
-        DomibusConnectorPartyType toParty = new DomibusConnectorPartyType();
+        var toParty = new DomibusConnectorPartyType();
         toParty.setPartyId(messageProperties.getProperty(TO_PARTY_ID_PROP_NAME));
         toParty.setPartyIdType(messageProperties.getProperty(TO_PARTY_ID_TYPE_PROP_NAME));
         toParty.setRole(messageProperties.getProperty(TO_PARTY_ROLE_PROP_NAME));
         messageDetails.setToParty(toParty);
 
-        DomibusConnectorServiceType service = new DomibusConnectorServiceType();
+        var service = new DomibusConnectorServiceType();
         service.setService(messageProperties.getProperty(SERVICE_NAME_PROP_NAME));
         service.setServiceType(messageProperties.getProperty(SERVICE_TYPE_PROP_NAME));
         messageDetails.setService(service);
@@ -519,23 +630,39 @@ public class LoadStoreTransitionMessage {
         messageDetails.setConversationId(messageProperties.getProperty(CONVERSATION_ID_PROP_NAME));
 
         messageDetails.setEbmsMessageId(messageProperties.getProperty(EBMS_ID_PROP_NAME));
-        messageDetails.setRefToMessageId(messageProperties.getProperty(REF_TO_MESSAGE_ID_PROP_NAME));
+        messageDetails.setRefToMessageId(
+            messageProperties.getProperty(REF_TO_MESSAGE_ID_PROP_NAME));
 
         messageDetails.setBackendMessageId(messageProperties.getProperty(NATIONAL_ID_PROP_NAME));
 
-        messageDetails.setOriginalSender(messageProperties.getProperty(ORIGINAL_SENDER_NAME_PROP_NAME));
+        messageDetails.setOriginalSender(
+            messageProperties.getProperty(ORIGINAL_SENDER_NAME_PROP_NAME));
         messageDetails.setFinalRecipient(messageProperties.getProperty(FINAL_RECIPIENT_PROP_NAME));
 
         return messageDetails;
     }
 
-
+    /**
+     * An implementation of the {@link DataSource} interface that wraps an {@link InputStream}. It
+     * reads the content of the input stream and stores it in memory using a
+     * {@link ByteArrayOutputStream}. The content can be retrieved as an {@link InputStream} or as a
+     * byte array. This class is read-only, and attempting to get an output stream will throw an
+     * {@link IOException}.
+     */
     public static class InputStreamDataSource implements DataSource {
         ByteArrayOutputStream buffer = new ByteArrayOutputStream();
 
+        /**
+         * An implementation of the {@link DataSource} interface that wraps an {@link InputStream}.
+         * It reads the content of the input stream and stores it in memory using a
+         * {@link ByteArrayOutputStream}. The content can be retrieved as an {@link InputStream} or
+         * as a byte array. This class is read-only, and attempting to get an output stream will
+         * throw an {@link IOException}.
+         *
+         * @param inputStream The input stream to be wrapped.
+         */
         public InputStreamDataSource(InputStream inputStream) {
             try {
-                int nRead;
                 StreamUtils.copy(inputStream, buffer);
             } catch (IOException e) {
                 throw new RuntimeException(e);
@@ -544,7 +671,6 @@ public class LoadStoreTransitionMessage {
 
         @Override
         public String getContentType() {
-            //return new MimetypesFileTypeMap().getContentType(name);
             return "application/octet-stream";
         }
 
@@ -562,8 +688,5 @@ public class LoadStoreTransitionMessage {
         public OutputStream getOutputStream() throws IOException {
             throw new IOException("Read-only data");
         }
-
     }
-
-
 }
